# ommikomm

./: AUTHORS  Anleitung.odt  ChangeLog  INSTALL.md  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  main.cpp  ommikomm.cbp  ommikomm.depend  ommikomm.layout
include/: AutopoweroffState.h  ConfigState.h  HelpState.h  IOKCommands.h  IOKConfig.h  IOKState.h  NormaleState.h  OKConfig.h  OKConfigPersistent.h  OmmiKomm.h  OmmiKommTextfield.h
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  de.gmo  de.po  ommikomm.pot
po/de/: ommikomm.mo  ommikomm.po  ommikomm.po~
src/: AutopoweroffState.cpp  AutopoweroffState.h  ConfigState.cpp  HelpState.cpp  ICommands.h  IOKCommands.h  IPINResult.h  IState.h  NormaleState.cpp  NormaleState.h  OKConfig.cpp  OmmiKomm.h  OmmiKommTextfield.cpp  PINInputState.cpp  PINInputState.h  RestartState.cpp  RestartState.h  TypingState.cpp  TypingState.h  config.h.in  main.cpp
src/config/: Config.h  ConfigState.cpp  ConfigState.h  IOKConfig.h  OKConfig.cpp  OKConfig.h  OKConfigPersistent.cpp  OKConfigPersistent.h
src/help/: HelpState.cpp  HelpState.h
src/settings/: ISettings.h  SettingValues.h  Settings.cpp  Settings.h  SettingsPersistence.cpp  SettingsPersistence.h  SettingsState.cpp  SettingsState.h
src/textfield/: OmmiKommTextfield.cpp  OmmiKommTextfield.h
tests/: check_ommikomm.cpp  check_persistence.cpp  compare_files.cpp  mock_config.cpp
tests/test_data/: config1.xml  config3.xml
